# psst

./: .gitignore  Cargo.toml  Info.plist  Makefile  README.md  build.rs  flake.nix
nix/: home-module.nix  nixos-module.nix
psst.icon/: icon.json
src/: config.rs  daemon.rs  filters.rs  main.rs  session.rs  verify.rs
src/daemon/: decide.rs  handlers.rs  mod.rs  runtime.rs  state.rs
src/notification/: linux.rs  macos.rs  mod.rs
